[package]
name = "mrs-matrix"
authors = ["generic-user1"]
description = "A multiplatform Rust clone of cmatrix"
repository = "https://github.com/generic-user1/mrs-matrix"
edition = "2021"
license = "MIT"
readme = "README.md"
version = "1.0.0"


[dependencies]
crossterm = "0.23.2"
coolor = {version = "0.5.0", features=["crossterm"]}
rand = "0.8.5"
clap = {version = "3.2.6", features = ["derive"]}