[package]
name = "mrs-matrix"
authors = ["generic-user1"]
description = "A multiplatform Rust clone of cmatrix"
repository = "https://github.com/generic-user1/mrs-matrix"
documentation = "https://docs.rs/mrs-matrix/latest"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["matrix", "cmatrix", "multiplatform"]
categories = ["command-line-utilities", "games"]
version = "1.0.2"


[dependencies]
crossterm = "0.23.2"
coolor = {version = "0.5.0", features=["crossterm"]}
rand = "0.8.5"
clap = {version = "3.2.6", features = ["derive"]}